--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
+# ignor the stuff below
+.gradle/
+build/
+out/
+.DS_Store
+.idea/
